--- a/Team.html
+++ b/Team.html
@@ -92,10 +92,13 @@
 										<div class="box">
 											</br>
 											<img src="images/Photo/CaiQing.jpg" style="float:left;width:120px;margin:5px">
-											<p><strong>Qing Cai</strong> is currently studying for B.S. in Computer Science and Technology at School of Computer and Software in Nanjing University of Information Science and Technology. His research interests include</p>
-											</br></br></br></br>
+											<p><strong>Qing Cai</strong> received the B.Sc. in Computer Science and Technology at Nanjing University of Information Science and Technology in 2019. In the same year, she was admitted to study for a M.Sc. in Institute of Computing Technology, Chinese Academy of Sciences without entrance examination. Her research interests include mobile edge computing and 5G.</p>
+											</br></br>
 											<img src="images/Photo/LiuQingxiang.jpg" style="float:left;width:120px;margin:5px">
-											<p><strong>Qingxiang Liu</strong> is currently studying for B.S. in Computer Science and Technology at School of Computer and Software in Nanjing University of Information Science and Technology. His research interests include</p>
+											<p><strong>Qingxiang Liu</strong> is currently pursuing the B.S. degree in software engineering with the School of Computer and Software, Nanjing University of Information Science and Technology, Nanjing, China. He has authored or coauthored a conference paper at IEEE Big Data Security 2018 and journal papers at Future Generation Computer Systems and on IEEE Transactions on Computational Social Systems. His current research interests include big data and service computing.</p>
+											</br>
+											<img src="images/Photo/ChenYuhao.jpg" style="float:left;width:120px;margin:5px">
+											<p><strong>Yuhao Chen</strong> is currently studying for a bachelor's degree at School of Computer and Software in Nanjing University of Information Science and Technology. His research interest is mobile cloud computing.</p>
 											</br></br></br></br>
 											
 											<img src="images/Photo/XueYuan.jpg" style="float:left;width:120px;margin:5px">
@@ -113,11 +116,13 @@
 											</br></br></br></br>
 											<img src="images/Photo/LiYuancheng.jpg" style="float:left;width:120px;margin:5px">
 											<p><strong>Yuancheng Li</strong> is currently working towards his B.S. degree in Computer Science and Technology at School of Computer and Software in Nanjing University of Information Science and Technology. His research interests include Cloud Computing and Edge Computing.</p>
+											</br></br></br>
+											<img src="images/Photo/GengQingfan.jpg" style="float:left;width:120px;margin:5px">
+											<p><strong>Qingfan Geng</strong> is currently studying for a B.S degree in Computer Science and Technology at the School of Computer and Software at Nanjing University of Information Science and Technology. Her research includes Cloud Computing and Blockchain. </p>
 											</br></br></br></br>
-											
 											<img src="images/Photo/FangZijie.jpg" style="float:left;width:120px;margin:5px">
 											<p><strong>Zijie Fang</strong> is currently working towards his B.S. degree in Computer Science and Technology at School of Computer and Software in Nanjing University of Information Science and Technology. His research interests include Deep Learning and Edge Computing.</p>
-											</br></br></br></br>
+											</br></br></br>
 											<img src="images/Photo/ShenBowen.JPG" style="float:left;width:120px;margin:5px">
 											<p><strong>Bowen Shen</strong> is currently working towards his B.S. degree in Computer Science and Technology at School of Computer and Software in Nanjing University of Information Science and Technology. His research interests include edge computing and IoT.</p>
 											</br></br></br></br>
