--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
 									<h3>News</h3>
 									<ul class="" style="text-align: justify;">
 										<li>Nov. 9, 2019, My google citations exceed 800.</li>
-										<li>Sep. 19, 2019, Our paper has been accepted in IEEE Internet of Things Journal. Many thanks to Mr Chengxun He's hard work.</li>
+										<li>Sep. 19, 2019, Our paper has been accepted in <strong>IEEE Internet of Things Journal</strong>. Many thanks to Mr Chengxun He's hard work.</li>
 										<li>Sep. 10, 2019, My google citations exceed 600.</li>
-										<li>Aug. 16, 2019, Our paper has been accepted in IEEE Transactions on Industrial Informatics. Many thanks to my brother Dr. Xuyun Zhang.</li>
-										<li>Aug. 5, 2019, Our paper has been accepted by Software: Practice and Experience. Many thanks to Mr. Yi Chen.</li>
-										<li>Jul. 18, 2019, Our paper has been accepted by the top conference ICSOC 2019 in service computing (Accept rate: 15%). Many thanks to Mr Yuan Xue, Prof. Wanchun Dou, Prof. Lianyong Qi, and Dr. Qiang He.</li>
-										<li>Apr. 22, 2019, Our paper has been accepted in World Wide Web journal. Congratulations to A/Prof. Lianyong Qi.</li>
+										<li>Aug. 16, 2019, Our paper has been accepted in <strong>IEEE Transactions on Industrial Informatics</strong>. Many thanks to my brother Dr. Xuyun Zhang.</li>
+										<li>Aug. 5, 2019, Our paper has been accepted by <strong>Software: Practice and Experience</strong>. Many thanks to Mr. Yi Chen.</li>
+										<li>Jul. 18, 2019, Our paper has been accepted by the top conference <strong>ICSOC 2019 in service computing (Accept rate: 15%)</strong>. Many thanks to Mr Yuan Xue, Prof. Wanchun Dou, Prof. Lianyong Qi, and Dr. Qiang He.</li>
+										<li>Apr. 22, 2019, Our paper has been accepted in <strong>World Wide Web journal</strong>. Congratulations to A/Prof. Lianyong Qi.</li>
 										<li>Apr. 1, 2019, Our paper has been accepted in <strong>IEEE Transactions on Computational Social Systems</strong>. Many thanks to Mr Qingxiang Liu's hardwork.</li>
 										<li>Mar. 14, 2019, Our paper has been accepted in<strong> IEEE Transactions on Computational Social Systems</strong>. Congratulations to A/Prof. Lianyong Qi.</li>
-										<li>Mar. 4, 2019, Our paper has been accepted in IEEE Transactions on Emerging Topics in Computational Intelligence. Many thanks to Mr Shucun Fu's hardwork.</li>
+										<li>Mar. 4, 2019, Our paper has been accepted in <strong>IEEE Transactions on Emerging Topics in Computational Intelligence</strong>. Many thanks to Mr Shucun Fu's hardwork.</li>
 									</ul>
 									<!--
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
@@ -103,7 +103,7 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>Publications<a href="Publications.html" style="float:right;font:10px">>Details</a></h3>
+									<h3>Publications<a href="Publications.html" style="float:right;font:10px">> Details</a></h3>
 									</br>
 									<ul style="text-align: justify;">
 										<li id="h.p_Aw1o70nnDu3c" class="TYR86d zfr3Q" style="white-space: normal;"><strong>[ICSOC'19] Xiaolong Xu,</strong> Yuan Xue, Lianyong Qi, Xuyun Zhang, Shaohua Wan, Wanchun Dou, Victor Chang. Load-aware Edge Server Placement for Mobile Edge Computing in 5G networks. The 17th International Conference on Service-Oriented Computing, 2019.<strong> (Accept Rate: 15%)</strong></li>
@@ -122,7 +122,7 @@
 						<!-- Four -->
 						<section id="four">
 							<div class="container">
-								<h3>Team<a href="Team.html" style="float:right;font:10px">>Details</a></h3>
+								<h3>Team<a href="Team.html" style="float:right;font:10px">> Details</a></h3>
 								</br>
 								<table style="text-align:center">
 									<h4>Master</h4>
@@ -158,16 +158,12 @@
 										<td><img src=images/Photo/GengQingfan.jpg  style="height:130px" title=""><p style="text-align:center">Qingfan Geng</p></td>
 									</tr>
 									<tr>
-										<td><img src=images/Photo/JiangGaoxing.jpg  style="height:130px" title=""><p style="text-align:center">Gaoxing Jiang</p></td>
-										<td><img src=images/Photo/HuangRui.jpg  style="height:130px" title=""><p style="text-align:center">Rui Huang</p></td>
 										<td><img src=images/Photo/FangZijie.jpg  style="height:130px" title=""><p style="text-align:center">Zijie Fang</p></td>
-									</tr>
-									<tr>
 										<td><img src=images/Photo/ShenBowen.JPG style="height:130px" title=""><p style="text-align:center">Bowen Shen</p></td>
 										<td><img src=images/Photo/HuangQihe.JPG style="height:130px" title=""><p style="text-align:center">Qihe Huang</p></td>
-										<td><img src=images/Photo/YanXuan.JPG style="height:130px" title=""><p style="text-align:center">Xuan Yan</p></td>
 									</tr>
 									<tr>
+										<td><img src=images/Photo/YanXuan.JPG style="height:130px" title=""><p style="text-align:center">Xuan Yan</p></td>
 										<td><img src=images/Photo/WangShuo.jpg style="height:130px" title=""><p style="text-align:center">Shuo Wang</p></td>
 									</tr>
 								</table>
@@ -235,23 +231,23 @@
 						<!-- Five -->
 							<section id="five">
 								<div class="container">
-									<h3>Co-authors<a href="Co-authors.html" style="float:right;font:10px">>Details</a></h3>
+									<h3>Co-authors<a href="Co-authors.html" style="float:right;font:10px">> Details</a></h3>
 								</br>
 								<table style="text-align:center">
 									<tr>
 										<td><img src=images/Photo/DouWanchun.jpg  style="height:130px" title=""><p style="text-align:center">Wanchun Dou</p></td>
 										<td><img src=images/Photo/QiLianyong.jpg  style="height:130px" title=""><p style="text-align:center">Lianyong Qi</p></td>
+										<td><img src=images/Photo/ZhangXuyun.jpg  style="height:130px" title=""><p style="text-align:center">Xuyun Zhang</p></td>
+									</tr>
+									<tr>
+										<td><img src=images/Photo/YuanYuan.png  style="height:130px" title=""><p style="text-align:center">Yuan Yuan</td>
+										<td><img src=images/Photo/LiShancang.jpg  style="height:130px" title=""><p style="text-align:center">Shancang Li</p></td>
 										<td><img src=images/Photo/HeQiang.jpg  style="height:130px" title=""><p style="text-align:center">Qiang He</p></td>
 									</tr>
 									<tr>
-										<td><img src=images/Photo/WanShaohua.jpg  style="height:130px" title=""><p style="text-align:center">Shaohua Wan</p></td>
-										<td><img src=images/Photo/ZhangXuyun.jpg  style="height:130px" title=""><p style="text-align:center">Xuyun Zhang</p></td>
-										<td><img src=images/Photo/LiShancang.jpg  style="height:130px" title=""><p style="text-align:center">Shancang Li</p></td>
-									</tr>
-									<tr>
 										<td><img src=images/Photo/DaiFei.jpg  style="height:130px" title=""><p style="text-align:center">Fei Dai</p></td>
+										<td><img src=images/Photo/WanShaohua.jpg  style="height:130px" title=""><p style="text-align:center">Shaohua Wan</p></td>
 										<td><img src=images/Photo/GaoHonghao.jpg  style="height:130px" title=""><p style="text-align:center">Honghao Gao</p></td>
-										<td><img src=images/Photo/YuanYuan.png  style="height:130px" title=""><p style="text-align:center">Yuan Yuan</td>
 									</tr>
 								</table>
 
