--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 						<li><a href="#one" class="active">About</a></li>
 						<li><a href="#two">News</a></li>
 						<li><a href="#three">Publications</a></li>
-						<li><a href="#four">Team</a></li>
-						<li><a href="#five">Co-authors</a></li>
+						<li><a href="Team.html">Team</a></li>
+						<li><a href="Co-authors.html">Co-authors</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -119,7 +119,7 @@
 								</div>
 							</section>
 
-						<!-- Four -->
+						<!-- Four 
 						<section id="four">
 							<div class="container">
 								<h3>Team<a href="Team.html" style="float:right;font:10px">> Details</a></h3>
@@ -167,6 +167,8 @@
 										<td><img src=images/Photo/WangShuo.jpg style="height:130px" title=""><p style="text-align:center">Shuo Wang</p></td>
 									</tr>
 								</table>
+							-->
+
 								<!--
 								<ul style="text-align: justify;">
 									<img src="images/Photo/FuShucun.png" style="float:left; margin:5px; padding:5px; text-align:center; height:130px; line-height:100%" >
@@ -228,7 +230,7 @@
 							</div>
 						</section>
 						
-						<!-- Five -->
+						<!-- Five 
 							<section id="five">
 								<div class="container">
 									<h3>Co-authors<a href="Co-authors.html" style="float:right;font:10px">> Details</a></h3>
@@ -250,7 +252,7 @@
 										<td><img src=images/Photo/GaoHonghao.jpg  style="height:130px" title=""><p style="text-align:center">Honghao Gao</p></td>
 									</tr>
 								</table>
-
+						-->
 									<!--
 									<form method="post" action="#">
 										<div class="row gtr-uniform">
